# wordlist

./: .editorconfig  .gitignore  .npmignore  .travis.yml  Cargo.toml  README.md  index.js  index.spec.js  package.json
res/: genjson.sh  wordlist.txt
src/: lib.rs
