[package]
name = "parity-wordlist"
version = "1.3.1"
description = "Word list used to generate brain wallets for Parity."
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/wordlist"
edition = "2018"

[dependencies]
lazy_static = "1.0"
rand = "0.7"
